@startuml

class Dataset {
    data : Data
    device_data : Data{}
    raw_data : Data{}
    metadata : Metadata
    fill_mode : FillMode

    preferred_data()
}
note left: raw_data contain the\nunfilled values of all\ndevice_data and share\nthe same key.\n\nData and device_data\ncontain the filled values.

enum FillMode {
    LASTFILL
    NANFILL
    LASTNANFILL
    NOFILL
}
note bottom: Are these modes sufficient?\nAre they all needed?\nIs something missing?

class Metadata
note bottom: See separate diagram\nfor class hierarchy


class Data {
    data : numpy.ndarray
    axes : Axis[]

    + get_metadata()
    - _get_data()
}
note left: Can data be\nragged arrays?

class Axis {
    quantity : string
    symbol : string
    unit : string
    values : numpy.ndarray

    label()
}

Dataset *-- Metadata
Dataset *-- Data
Data *-- Axis

@enduml